add command arguments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.52"
 cargo = "0.58.0"
+clap = { version = "3.0.6", features = ["derive"] }
 crossbeam = { version = "0.8.1", features = ["std"] }
 log = "0.4.14"
